# graph-theory

./: .gitignore  .gitmodules  .travis.yml  Makefile.coq.local  README.md  TODO  _CoqProject  _CoqProject.wagner  coq-graph-theory-planar.opam  coq-graph-theory.opam  depend-colors.gv  depopts.patch  dune-project  files.txt  index.html  index.md  make.bat  meta.yml
.github/workflows/: coq-action.yml  docker-action.yml
coq/: .gitignore  Makefile  README  TODO  _CoqProject  bij.v  bounded.v  brand_new.v  checkpoint.v  completeness.v  confluence.v  connectivity.v  corollaries.v  cp_minor.v  depend-colors.gv  depend-graph-colors.gv  digraph.v  edone.v  equiv.v  excluded.v  expansion.v  extraction.v  extraction_def.v  extraction_iso.v  extraction_top.v  files.txt  finite_quotient.v  finmap_plus.v  graphs.v  liso.v  menger.v  mgraph.v  mgraph2.v  mgraph2_jar.v  mgraph2_tw2.v  mgraph_jar.v  minor.v  multigraph.v  multigraph3.v  multigraph_bak.v  (+27 more)
coq/attic/: checkpoint-removed.v  cp_tree.v  multigraph2.v  multigraph3.v  multigraph_new.v  sgraph-removed.v
docs/v0.9/: GraphTheory.K4plane.html  GraphTheory.arc.html  GraphTheory.bij.html  GraphTheory.bounded.html  GraphTheory.checkpoint.html  GraphTheory.coloring.html  GraphTheory.completeness.html  GraphTheory.connectivity.html  GraphTheory.cp_minor.html  GraphTheory.digraph.html  GraphTheory.dom.html  GraphTheory.edone.html  GraphTheory.embedding.html  GraphTheory.equiv.html  GraphTheory.excluded.html  GraphTheory.extraction_def.html  GraphTheory.extraction_iso.html  GraphTheory.extraction_top.html  GraphTheory.finite_quotient.html  GraphTheory.finmap_plus.html  GraphTheory.hcycle.html  GraphTheory.helly.html  GraphTheory.hmap_ops.html  GraphTheory.mgraph.html  GraphTheory.mgraph2.html  GraphTheory.mgraph2_tw2.html  GraphTheory.minor.html  GraphTheory.open_confluence.html  GraphTheory.partition.html  GraphTheory.preliminaries.html  GraphTheory.ptt.html  GraphTheory.pttdom.html  GraphTheory.reduction.html  GraphTheory.rewriting.html  GraphTheory.set_tac.html  GraphTheory.setoid_bigop.html  GraphTheory.sgraph.html  GraphTheory.skeleton.html  GraphTheory.smerge.html  GraphTheory.structures.html  (+7 more)
notes/: Lemma17.txt  TODO.txt  design_decisions.txt  errata.txt
theories/: .gitignore  K4plane.v  Makefile  _CoqProject  arc.v  bigop_plus.v  bij.v  checkpoint.v  coloring.v  completeness.v  connectivity.v  cp_minor.v  digraph.v  dom.v  embedding.v  equiv.v  excluded.v  extraction_def.v  extraction_iso.v  extraction_top.v  finite_quotient.v  finmap_plus.v  hcycle.v  helly.v  hmap_ops.v  mgraph.v  mgraph2.v  mgraph2_tw2.v  minor.v  more.v  open_confluence.v  partition.v  preliminaries.v  ptt.v  pttdom.v  reduction.v  rewriting.v  set_tac.v  setoid_bigop.v  sgraph.v  (+10 more)
theories/core/: Make  arc.v  bij.v  bounded.v  checkpoint.v  coloring.v  completeness.v  connectivity.v  cp_minor.v  digraph.v  dom.v  dune  edone.v  equiv.v  excluded.v  extraction_def.v  extraction_iso.v  extraction_top.v  finite_quotient.v  finmap_plus.v  helly.v  mgraph.v  mgraph2.v  mgraph2_tw2.v  minor.v  open_confluence.v  partition.v  preliminaries.v  ptt.v  pttdom.v  reduction.v  rewriting.v  set_tac.v  setoid_bigop.v  sgraph.v  skeleton.v  smerge.v  structures.v  transfer.v  treewidth.v  (+1 more)
theories/planar/: K4plane.v  Make  dune  embedding.v  hcycle.v  hmap_ops.v  wagner.v
wagner/: index.html
wagner/current/: GraphTheory.K4plane.html  GraphTheory.arc.html  GraphTheory.bij.html  GraphTheory.bounded.html  GraphTheory.checkpoint.html  GraphTheory.completeness.html  GraphTheory.connectivity.html  GraphTheory.cp_minor.html  GraphTheory.digraph.html  GraphTheory.dom.html  GraphTheory.edone.html  GraphTheory.embedding.html  GraphTheory.equiv.html  GraphTheory.excluded.html  GraphTheory.extraction_def.html  GraphTheory.extraction_iso.html  GraphTheory.extraction_top.html  GraphTheory.finite_quotient.html  GraphTheory.finmap_plus.html  GraphTheory.hcycle.html  GraphTheory.helly.html  GraphTheory.hmap_ops.html  GraphTheory.mgraph.html  GraphTheory.mgraph2.html  GraphTheory.mgraph2_tw2.html  GraphTheory.minor.html  GraphTheory.open_confluence.html  GraphTheory.preliminaries.html  GraphTheory.ptt.html  GraphTheory.pttdom.html  GraphTheory.reduction.html  (+14 more)
