opam-version: "2.0"
maintainer: "christian.doczkal@mpi-sp.org"
version: "dev"

homepage: "https://github.com/coq-community/graph-theory"
dev-repo: "git+https://github.com/coq-community/graph-theory.git"
bug-reports: "https://github.com/coq-community/graph-theory/issues"
license: "CECILL-B"

synopsis: "Graph theory results on planarity in Coq and MathComp"
description: """
Formal definitions and results on graph planarity in Coq using the Mathematical Components
library, including Wagner's Theorem. Relies on hypermaps and other notions developed
as part of the Coq proof of the Four-Color Theorem."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "coq" {(>= "8.16" & < "8.18~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "2.0" & < "2.1~") | (= "dev")}
  "coq-graph-theory" {= version}
  "coq-fourcolor"
]

tags: [
  "category:Computer Science/Graph Theory"
  "keyword:graph theory"
  "keyword:planarity"
  "logpath:GraphTheory.planar"
]
authors: [
  "Christian Doczkal"
  "Damien Pous"
]
