opam-version: "2.0"
maintainer: "christian.doczkal@inria.fr"
version: "dev"

homepage: "https://github.com/coq-community/graph-theory"
dev-repo: "git+https://github.com/coq-community/graph-theory.git"
bug-reports: "https://github.com/coq-community/graph-theory/issues"
license: "CECILL-B"

synopsis: "Graph theory results in Coq and MathComp"
description: """
A library of formalized graph theory results, including various
standard results from the literature (e.g., Menger’s Theorem, Hall’s
Marriage Theorem, and the excluded minor characterization of
treewidth-two graphs) as well as some more recent results arising
from the study of relation algebra within the ERC CoVeCe project
(e.g., soundness and completeness of an axiomatization of graph
isomorphism)."""

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.11" & < "8.13~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.10" & < "1.13~") | (= "dev")}
  "coq-mathcomp-finmap" 
  "coq-hierarchy-builder" { >= "0.10" }
]

tags: [
  "category:Computer Science/Graph Theory"
  "keyword:graph theory"
  "keyword:minors"
  "keyword:treewidth"
  "keyword:algebra"
  "logpath:GraphTheory"
]
authors: [
  "Christian Doczkal"
  "Damien Pous"
]
