opam-version: "2.0"
maintainer: "christian.doczkal@mpi-sp.org"
version: "dev"

homepage: "https://github.com/coq-community/graph-theory"
dev-repo: "git+https://github.com/coq-community/graph-theory.git"
bug-reports: "https://github.com/coq-community/graph-theory/issues"
license: "CECILL-B"

synopsis: "General graph theory definitions and results in Coq and MathComp"
description: """
Formalized general graph theory definitions and results using Coq and
the Mathematical Components library, including various standard results
from the literature (e.g., Menger's Theorem and Hall's Marriage Theorem)."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {(>= "8.14" & < "8.18~") | (= "dev")}
  "coq-mathcomp-ssreflect" {>= "1.13" & < "1.18~"}
  "coq-mathcomp-algebra" 
  "coq-mathcomp-finmap" 
  "coq-hierarchy-builder" {>= "1.1.0"}
]

tags: [
  "category:Computer Science/Graph Theory"
  "keyword:graph theory"
  "keyword:minors"
  "keyword:treewidth"
  "keyword:algebra"
  "logpath:GraphTheory.core"
]
authors: [
  "Christian Doczkal"
  "Damien Pous"
]
